--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 ################################################################################
 
 /.vs
+venv/
+_build/
+_static/
+_templates/
+make.bat
+makefile
+.DS_store
+
